@@ -285,96 +285,6 @@ public class FedoraObjectRepository implements IObjectRepository
 
 
     /**
-     * Replaces object identified by {@code identifier} in the fedora repository
-     * with {@code cargo}
-     *
-     * @param identifier the object to replace
-     * @param cargo the data to replace object with
-     *
-     * @throws ObjectRepositoryException if either deletion of the old object or storage of the new went wrong
-     */
-    @Override
-    public void replaceObject( String identifier, CargoContainer cargo ) throws ObjectRepositoryException
-    {
-        if ( cargo.getCargoObjectCount() == 0 )
-        {
-            String error = String.format( "Identifier '%s' delivered with an empty CargoContainer", identifier );
-            log.error( error );
-            throw new IllegalStateException( error );
-        }
-
-        String cargoIdentifier = cargo.getIdentifierAsString();
-
-        if ( cargoIdentifier.isEmpty() )
-        {
-            String[] newPid = null;
-            String prefix = cargo.getCargoObject( DataStreamType.OriginalData ).getSubmitter();
-
-            try
-            {
-                newPid = fedoraHandle.getNextPID( 1, prefix );
-            }
-            catch( ServiceException ex )
-            {
-                String error = String.format( "Could not retrieve new pids from prefix '%s': %s ", prefix, ex.getMessage() );
-                log.error( error );
-                throw new ObjectRepositoryException( error, ex );
-            }
-            catch( ConfigurationException ex )
-            {
-                String error = String.format( "Could not retrieve new pids from prefix '%s': %s ", prefix, ex.getMessage() );
-                log.error( error );
-                throw new ObjectRepositoryException( error, ex );
-            }
-            catch( MalformedURLException ex )
-            {
-                String error = String.format( "Could not retrieve new pids from prefix '%s': %s ", prefix, ex.getMessage() );
-                log.error( error );
-                throw new ObjectRepositoryException( error, ex );
-            }
-            catch( IOException ex )
-            {
-                String error = String.format( "Could not retrieve new pids from prefix '%s': %s ", prefix, ex.getMessage() );
-                log.error( error );
-                throw new ObjectRepositoryException( error, ex );
-            }
-            catch( IllegalStateException ex )
-            {
-                String error = String.format( "Could not retrieve new pids from prefix '%s': %s ", prefix, ex.getMessage() );
-                log.error( error );
-                throw new ObjectRepositoryException( error, ex );
-            }
-
-            if (null == newPid && 1 != newPid.length)
-            {
-                String error = String.format( "pid is empty for namespace '%s', but no exception was caught.", prefix );
-                log.error( error );
-                throw new ObjectRepositoryException( error );
-            }
-
-            cargoIdentifier = newPid[0];
-            cargo.setIdentifier( new PID( cargoIdentifier ) );
-        }
-
-        String logm = String.format( "Replacing object referenced by pid %s with data previously identified by id %s", identifier, cargoIdentifier );
-        deleteObject( identifier, logm );
-
-        cargo.setIdentifier( new PID( identifier ) );
-
-        String storedObjectPid = storeObject( cargo, logm, "auto" );
-
-        if ( ! storedObjectPid.equals( identifier ) )
-        {
-            String error = String.format( "Could not store replacement object with pid '%s': stored with pid '%s' instead", identifier, storedObjectPid );
-            log.error( error );
-            throw new ObjectRepositoryException( error );
-            //rollback?
-            // perhaps instead of a purge, we should use mark-as-deleted and then commit if storedObjectPid.equals( identifier )
-        }
-    }
-
-
-    /**
      * Retrieves an object encoded as a {@link CargoContainer} from the fedora
      * object repository. The method also handles the information given in
      * the administration stream of the object
