@@ -1,4 +1,5 @@
 1.1.0
+   - bug [11170] "Kan vi slette replaceObject metoden fra IObjectRepository"
    - bug [11181] "IObjectRepository.getIdentifiers metoderne"
    - bug [11172] "Der er to IObjectRepository.getDataFromObject metoder, ingen af dem bruges"
    - bug [11173] "IObjectRepository.deleteDataFromObejct metoden bruges ikke."
